k8s/prod/bsc-prod_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bsc-production
  name: bsc-frontend-production
spec:
  type: NodePort
  ports:
  - name: http
    port: 3001
    targetPort: 3001
  selector:
    app: bsc-frontend-production

---
apiVersion: v1
kind: Service
metadata:
  namespace: bsc-production
  name: bsc-core-production
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: bsc-core-production
