k8s/prod/bsc-prod_ingress.yaml
# Please deploy a AWS Load Balancer controller to your cluster prior to deploying this ingress controller. 
# https://docs.aws.amazon.com/eks/latest/userguide/aws-load-balancer-controller.html
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:278428321638:certificate/aad5777f-07eb-4682-b5f9-91668d911ec0
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0f98db3298d03aaa6,subnet-0d2661460e2c0e212,subnet-06098d9a2a04d96e1,subnet-03d1835bf31cb41d5
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /api/platform/status
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '4'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
  name: bsc-ingress-prod
  labels:
    name: bsc-ingress-prod
spec:
  defaultBackend:
    service:
      name: bsc-frontend-production
      port:
        number: 3001
  rules:
  - host: app.blockspaces.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: bsc-core-production
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bsc-frontend-production
            port: 
              number: 3001
